--- a/src/index.scss
+++ b/src/index.scss
@@ -5,8 +5,7 @@
     box-sizing: border-box;
 }
 #root > div {
-    max-width: 800px;
-    max-height: 600px;
-    height: 100vh;
+    width: 800px;
+    height: 600px;
     margin: 0 auto;
 }
