feat: 전기능 구현 완료

--- a/src/pages/PostReservation/PostReservation.module.scss
+++ b/src/pages/PostReservation/PostReservation.module.scss
@@ -207,6 +207,9 @@
             width: 18px;
             height: 18px;
         }
+        &.placeholder {
+            color: #a8a29e;
+        }
     }
 }
 .submitBtn {
