--- a/src/components/Reservation/Reservation.module.scss
+++ b/src/components/Reservation/Reservation.module.scss
@@ -1,75 +1,8 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px 20px;
-    position: relative;
-    .createReservationBtn {
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 8px;
-        border-radius: 10px;
-        border: none;
-        background-color: white;
-        display: flex;
-        align-items: center;
-        padding: 15px 20px;
-        gap: 5px;
-        left: 20px;
-        right: auto !important;
-        svg {
-            width: 20px;
-            height: 20px;
-            path {
-                fill: #ec551f;
-            }
-        }
-        span {
-            color: #ec551f;
-            font-weight: 700;
-        }
-    }
-    h3 {
-        font-size: 20px;
-        font-weight: 500;
-        color: #57534e;
-    }
-    .closeBtn {
-        width: 20px;
-        height: 20px;
-    }
-    .createReservationBtn,
-    .closeBtn {
-        cursor: pointer;
-        position: absolute;
-        top: 50%;
-        right: 20px;
-        transform: translateY(-50%);
-    }
-}
-
-.reservationListArea {
-    flex-grow: 1;
-    background-color: #f5f5f4;
-    padding: 10px;
-    ul {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 10px;
-        & > li {
-            overflow: hidden;
-            border-radius: 10px;
-            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        }
-    }
-}
 .reservation {
     background-color: white;
     padding: 10px;
     height: 100%;
+    cursor: pointer;
     .reservatorInfoWrap {
         display: flex;
         align-items: center;
@@ -149,6 +82,35 @@
             width: 18px;
             height: 18px;
             flex-shrink: 0;
+        }
+    }
+    .buttonsWrap {
+        display: flex;
+        gap: 15px;
+        margin-top: 15px;
+        button {
+            border: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:first-child {
+            width: 50px;
+            height: 50px;
+            background-image: linear-gradient(to bottom, #ffffff, #f5f5f4);
+            svg {
+                width: 25px;
+                height: 25px;
+            }
+        }
+        button:last-child {
+            flex-grow: 1;
+            background-image: linear-gradient(to bottom, #f0754a, #d94815);
+            font-size: 16px;
+            color: white;
         }
     }
 }
