--- a/src/index.scss
+++ b/src/index.scss
@@ -7,5 +7,11 @@
 #root > div {
     width: 800px;
     height: 600px;
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
+    overflow: scroll;
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
